--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -29,8 +29,8 @@
     </div>
     <main>
         <form action="/">
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="post" value="John"><br>
+            <label for="fname">Post:</label><br>
+            <input type="text" id="fname" name="post"><br>
             <button type="submit">Submit</button>
         </form>
         <ol id="posts">
