--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -28,14 +28,18 @@
         </div>
     </div>
     <main>
-        <form action="/">
-            <label for="fname">Post:</label><br>
-            <input type="text" id="fname" name="post"><br>
-            <button type="submit">Submit</button>
+        <form method="post" action="/">
+            <!--
+            <input type="hidden" name="hmac" value="d6439b44aa540215b477579603ddb3e79d74db4c">
+            -->
+            <input type="hidden" name="parent" value="29108643">
+            <input type="hidden" name="goto" value="item?id=29108643">
+            <textarea name="text" rows="6" cols="60" value="Default text."></textarea>
+            <br><br><input type="submit" value="add comment">
         </form>
-        <ol id="posts">
 
-        </ol>
-
-
-</main></body></html>
+        <!-- This is where posts go -->
+        <ol id="posts"></ol>
+    </main>
+</body>
+</html>
