Added default text

--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -34,7 +34,7 @@
             -->
             <input type="hidden" name="parent" value="29108643">
             <input type="hidden" name="goto" value="item?id=29108643">
-            <textarea name="text" rows="6" cols="60" value="Default text."></textarea>
+            <textarea name="text" rows="6" cols="60">Default text</textarea>
             <br><br><input type="submit" value="add comment">
         </form>
 
