--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -1,45 +1,31 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hacker news</title>
-    <link rel="stylesheet" href="style.css?file"/>
-</head>
+    <link rel="stylesheet" href="base.css?file" />
+    <link rel="stylesheet" href="index.css?file" />
+  </head>
 
-<body>
-    <div class="header">
-        <div class="left-header">
-            <div class="heading-and-image">
-                <img src="https://news.ycombinator.com/y18.gif"/>
-                <strong>
-                    <a href="/">Hacker News</a>
-                </strong>
-            </div>
-            <a href="/new">new</a>
-            <a href="/past">past</a>
-            <a href="/comments">comments</a>
-            <a href="/ask">ask</a>
-            <a href="/show">show</a>
-            <a href="/jobs">jobs</a>
-            <a href="/submit">submit</a>
-        </div>
-        <div class="right-header">
-            <a href="login.html">login</a>
-        </div>
-    </div>
+  <body>
+    <header>
+        <a href="/">L337 C0D3R F0RUM</a>
+        <a href="/new">new</a>
+        <a href="/past">past</a>
+        <a href="/comments">comments</a>
+        <a href="/ask">ask</a>
+        <a href="/show">show</a>
+        <a href="/jobs">jobs</a>
+        <a href="/submit">submit</a>
+    </header>
     <main>
-        <form method="post" action="/">
-            <!--
-            <input type="hidden" name="hmac" value="d6439b44aa540215b477579603ddb3e79d74db4c">
-            -->
-            <input type="hidden" name="parent" value="29108643">
-            <input type="hidden" name="goto" value="item?id=29108643">
-            <textarea name="text" rows="6" cols="60">Default text</textarea>
-            <br><br><input type="submit" value="add comment">
-        </form>
-
-        <!-- This is where posts go -->
-        <ol id="posts"></ol>
+      <form method="post" action="/">
+        <textarea name="text" rows="6" cols="60">Default text</textarea>
+        <br /><br /><input type="submit" value="add comment" />
+      </form>
+      <ol id="posts"><!-- Will be populated --></ol>
     </main>
-</body>
+  </body>
 </html>
