--- a/backend/forum-templates/post.html
+++ b/backend/forum-templates/post.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hacker news</title>
-    <link rel="stylesheet" href="style.css?file">
-</head>
+    <link rel="stylesheet" href="base.css?file" />
+    <link rel="stylesheet" href="post.css?file" />
+  </head>
 
-<body>
-    <div class="header">
-        <div class="left-header">
-            <div class="heading-and-image">
-                <img src="https://news.ycombinator.com/y18.gif">
-                <strong>
-                    <a href="index.html">Hacker News</a>
-                </strong>
-            </div>
-            <a href="/new">new</a>
-            <a href="/past">past</a>
-            <a href="/comments">comments</a>
-            <a href="/ask">ask</a>
-            <a href="/show">show</a>
-            <a href="/jobs">jobs</a>
-            <a href="/submit">submit</a>
-        </div>
-        <div class="right-header">
-            <a href="login.html">login</a>
-        </div>
-    </div>
+  <body>
+    <header>
+      <a href="/">L337 C0D3R F0RUM</a>
+      <a href="/new">new</a>
+      <a href="/past">past</a>
+      <a href="/comments">comments</a>
+      <a href="/ask">ask</a>
+      <a href="/show">show</a>
+      <a href="/jobs">jobs</a>
+      <a href="/submit">submit</a>
+    </header>
     <main>
-        <div id="post">
-        </div>
+      <div id="post"><!-- Will be populated --></div>
+      <!--
+      <form method="post" action="/">
+        <input
+          type="hidden"
+          name="hmac"
+          value="d6439b44aa540215b477579603ddb3e79d74db4c"
+        />
+        <input type="hidden" name="parent" value="29108643" />
+        <input type="hidden" name="goto" value="item?id=29108643" />
+        <textarea name="text" rows="6" cols="60">Default text</textarea>
+        <br /><br />
+        <input type="submit" value="add comment" />
+      </form>
+      -->
 
-        <form class="comment-form">
-            <textarea id="comment" name="comment" rows="7" cols="80"></textarea><br /><br />
-            <button>add comment</button>
-        </form>
-
-        <div id="comments">
-            <div class="comment">
-                <div class="comment-heading">
-                    <span>
-                        <a class="commenter-username" href="http://user">Username</a>
-                        <span class="time-commented">43 minutes ago</span>
-                        <input type="checkbox" id="collapsible" class="toggle collabsible-input">
-                        <label for="collapsible" class="lbl-toggle"></label>
-                        <div class="collapsible-content">
-                            <div class="content-inner">
-                                <p> This is a comment</p>
-                            </div>
-                        </div>
-                    </span>
+      <div id="comments">
+        <div class="comment">
+          <div class="comment-heading">
+            <span>
+              <a class="commenter-username" href="http://user">Username</a>
+              <span class="time-commented">43 minutes ago</span>
+              <input
+                type="checkbox"
+                id="collapsible"
+                class="toggle collabsible-input"
+              />
+              <label for="collapsible" class="lbl-toggle"></label>
+              <div class="collapsible-content">
+                <div class="content-inner">
+                  <p>This is a comment</p>
                 </div>
-            </div>
+              </div>
+            </span>
+          </div>
         </div>
+      </div>
     </main>
-
-</body>
-
+  </body>
 </html>
