--- a/backend/forum-templates/post.html
+++ b/backend/forum-templates/post.html
@@ -23,6 +23,7 @@
     <main>
       <div id="post"><!-- Will be populated --></div>
       <!--
+      This will need to be generated / edited serverside.
       <form method="post" action="/">
         <input
           type="hidden"
