--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hacker news</title>
-    <link rel="stylesheet" href="base.css?file" />
-    <link rel="stylesheet" href="index.css?file" />
+    <link rel="stylesheet" href="base.css?" />
+    <link rel="stylesheet" href="index.css?" />
   </head>
 
-  <body data-instant-intensity="mousedown" data-instant-allow-query-string data-instant-mousedown-shortcut>
+  <body data-instant-intensity="mousedown-only" data-instant-mousedown-shortcut>
     <header>
         <a href="/">L337 C0D3R F0RUM</a>
         <a href="/new">new</a>
@@ -25,9 +25,8 @@
         <textarea name="text" rows="6" cols="60">Default text</textarea>
         <br /><br /><input type="submit" value="add comment" />
       </form>
-      <a href="/test.html" data-instant>Test</a>
       <ol id="posts"><!-- Will be populated --></ol>
     </main>
-    <script src="instantpage.js?file" type="module" defer></script>
+    <script src="instantpage.js?" type="module" defer></script>
   </body>
 </html>
