--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -25,9 +25,9 @@
 
 		<main>
 			<form method="post" action="/post-thread">
-				<input type="text" name="title" value="This is the default title"/>
+				<input type="text" name="title" value=""/>
 				<br />
-				<textarea name="text" rows="6" cols="60">This is the default text for a post</textarea>
+				<textarea name="text" rows="6" cols="60"></textarea>
 				<br />
 				<input type="submit" value="add comment" />
 			</form>
