--- a/backend/forum-templates/index.html
+++ b/backend/forum-templates/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Hacker news</title>
+	<title>Test Forum</title>
 	<link rel="stylesheet" href="index.css" />
 	<script query type="threads" category="default" threadid>
 		<link rel="prefetch" href="thread?threadid=%s">
